--- a/Bet365Project/Views/Shared/_Layout.cshtml
+++ b/Bet365Project/Views/Shared/_Layout.cshtml
@@ -24,6 +24,8 @@
                     <li>@Html.ActionLink("홈", "Index", "Home")</li>
                     <li>@Html.ActionLink("정보", "About", "Home")</li>
                     <li>@Html.ActionLink("연락처", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("리스트", "List001MA", "Home")</li>
+
                 </ul>
             </div>
         </div>
